[project]
name = "create-gif-py"
version = "0.1.0"
description = "Create animated GIFs from images using ImageIO."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
]
authors = [
    { name = "Anis Mandal", email = "83820979+AgentPhoenix7@users.noreply.github.com" }
]

[project.scripts]
create-gif = "main:main"

[tool.hatch.build.targets.wheel]
include = ["create_gif.py", "main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"